// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generates a \`.gjs\` class-based component 1`] = `
"import Component from "@glimmer/component";

export default class Foo extends Component {
  <template>{{yield}}</template>
}
"
`;

exports[`generates a \`.gjs\` template-only component 1`] = `
"<template>{{yield}}</template>
"
`;

exports[`generates a \`.gjs\` template-only component at a custom path 1`] = `
"<template>{{yield}}</template>
"
`;

exports[`generates a \`.gts\` class-based component 1`] = `
"import Component from "@glimmer/component";

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

export default class Foo extends Component<FooSignature> {
  <template>
    {{yield}}
  </template>
}
"
`;

exports[`generates a \`.gts\` template-only component 1`] = `
"import type { TOC } from '@ember/component/template-only';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

const Foo: TOC<FooSignature> = <template>{{yield}}</template>;

export default Foo;
"
`;

exports[`generates a \`.gts\` template-only component at a custom path 1`] = `
"import type { TOC } from '@ember/component/template-only';

export interface FooSignature {
  Args: {};
  Blocks: {
    default: [];
  };
  Element: null;
}

const Foo: TOC<FooSignature> = <template>{{yield}}</template>;

export default Foo;
"
`;
